platform/container-registry/http-route.yaml
# HTTPRoute for Envoy Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docker-registry
  namespace: container-registry
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-gateway
    namespace: envoy-gateway-system
  hostnames:
  - docker-registry.bottle-note.com
  - docker-registry.dead-whale.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: zot
      port: 5000
      weight: 1
